# polybot-mg

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TUI_TEST_INSTRUCTIONS.md  WORKTREE.md
.specstory/history/: 2025-05-31_20-53-revamp-rust-cli-trading-bot-code.md  2025-06-09_22-37-resolve-unresolved-import-error.md  2025-06-09_22-43-resolve-ambiguous-glob-re-exports-error.md  2025-06-09_23-13-resolve-unresolved-import-error.md  2025-06-10_01-19-fixing-datasetwarning-display-error.md  2025-06-10_03-58-organize-data-folder-structure-and-naming.md  2025-06-10_06-27-fix-all-warnings-in-cargo-run.md
docs/: README.md  analyze_command_filters.md
docs/architecture/: README.md
docs/development/: README.md  testing-stream-tui.md
docs/features/: README.md  dataset-selector.md  gui-fixes-summary.md  pnl-calculation-analysis.md  run-strategy-guide.md  strategy-enhancement-summary.md  stream-improvements.md  tui-implementation.md  websocket-portfolio-migration.md
docs/troubleshooting/: README.md  gui-sidebar-fixes.md  stream-error-fixes.md
pipelines/: README.md  bitcoin_markets.yaml  bitcoin_price_bets.yaml  daily_monitor.yaml  election_markets.yaml  fetch_raw_markets.yaml  high_value_analysis.yaml  market_analysis.yaml  quick_fetch.yaml
schemas/: README.md  orderbook.fbs  trades.fbs
src/: auth.rs  auth_env.rs  config.rs  data_paths.rs  errors.rs  ethereum_utils.rs  lib.rs  logging.rs  main.rs  orders.rs  poland_election_markets.rs  types.rs
src/address_book/: commands.rs  db.rs  mod.rs  service.rs  storage.rs  types.rs
src/cli/: README.md  args.rs  mod.rs
src/core/: mod.rs
src/datasets/: manager.rs  mod.rs  selection.rs  tui.rs
src/execution/: README.md  config.rs  engine.rs  events.rs  mod.rs  orderbook.rs  orders.rs  sources.rs  strategies.rs
src/file_store/: mod.rs
src/gamma/: cache.rs  client.rs  database.rs  fast_search.rs  individual_storage.rs  session.rs  storage.rs  tui.rs  types.rs
src/gamma_api/: client.rs  mod.rs  storage.rs  tracker.rs  types.rs
src/gui/: README.md  app.rs  mod.rs
src/markets/: README.md  active.rs  analyze.rs  cache.rs  display.rs  enrich.rs  fetcher.rs  filtered.rs  list.rs  mod.rs  orderbook.rs  providers.rs  search.rs  storage.rs  types.rs  utils.rs
src/pipeline/: README.md  config.rs  mod.rs  runner.rs  tui.rs
src/portfolio/: README.md  command_handlers.rs  display.rs  manager.rs  mod.rs  orders_api.rs  reconciler.rs  service.rs  storage.rs  types.rs
src/search/: milli_service.rs  mod.rs  search_types.rs
src/services/: mod.rs  streamer.rs
src/storage/: README.md  discovery.rs  (+1 more)
(+151 files in other folders)
