[package]
name = "polymarket_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polybot"
path = "src/main.rs"

[dependencies]
polymarket-rs-client = "0.1.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
dirs = "5.0"
owo-colors = "3.5"
rust_decimal = "1.26"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
comfy-table = "7.0"
indicatif = "0.17"
futures = "0.3"
argon2 = "0.5"
async-trait = "0.1"
directories = "5.0"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"                       # for integration tests
tokio-test = "0.4"

[features]
default = []
sandbox = []                           # Mumbai testnet support
