[package]
name = "polybot"
version = "0.1.0"
edition = "2021"

[lib]
name = "polybot"
path = "src/lib.rs"

[[bin]]
name = "polybot"
path = "src/main.rs"

[dependencies]
polymarket-rs-client = "0.1.1"
ethers-core = "2.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
rpassword = "7.2"
aes-gcm = "0.10"
rand = "0.9.1"
base64 = "0.22.1"
dirs = "6.0.0"
owo-colors = "4.2.1"
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
comfy-table = "7.0"
indicatif = "0.17"
futures = "0.3"
rayon = "1.10"
argon2 = "0.5"
async-trait = "0.1"
directories = "6.0.0"
dotenvy = "0.15"

# WebSocket streaming dependencies
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-stream = "0.1"
dashmap = "6.1.0"
blake3 = "1.5"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5"
backoff = "0.4"
hmac = "0.12"
sha2 = "0.10"

# RocksDB storage dependencies
rocksdb = "0.23.0"
bincode = "2.0.1"

# Interactive TUI dependencies
ratatui = "0.29"
crossterm = "0.29"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6"                       # for integration tests
tokio-test = "0.4"
rust_decimal_macros = "1.26"          # for decimal literals in tests

